--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,11 @@
 @import "antd/dist/antd.css";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
+
+
+* {
+  font-family: 'Poppins', sans-serif;
+}
+
 
 
 html,
