--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,9 @@
 @import "antd/dist/antd.css";
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap");
 
 * {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
-
-
 
 html,
 body {
@@ -19,13 +16,13 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  cursor: pointer;
 }
 
 .inner-container {
   width: 90%;
   max-width: 1100px;
   margin: 0 auto;
-
 }
 
 * {
@@ -37,13 +34,10 @@ a {
   font-size: 2rem;
 }
 
-
 .logo {
   height: 1em;
   margin-left: 0.5rem;
 }
-
-
 
 .header {
   padding: 1rem 0;
@@ -52,15 +46,34 @@ a {
   right: 0;
   top: 0;
   width: 100%;
-
 }
 
 .page-content {
   padding: 1rem 0;
 }
 
+.title {
+  text-align: center;
+  font-size: 2.2rem;
+  font-weight: bold;
+}
 
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2rem;
+}
 
+.card {
+  border: 1px solid #eee;
+  padding: 2rem;
+  border-radius: 10px;
+}
+
+.card h2:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
 
 /* footer styles */
 
